--- a/examples/kitchen-sink/assets/stylesheets/app.css
+++ b/examples/kitchen-sink/assets/stylesheets/app.css
@@ -6,3 +6,32 @@ pre {
     margin-top: 10px;
     padding: 10px;
 }
+
+/* @group <section> #demo_scroll */
+.container-scroll {
+    padding: 4px;
+}
+
+.vertical {
+    height: 154px;
+}
+
+.horizontal {
+    position: relative;
+    top: 172px;
+    height: 75px;
+}
+
+.container-scroll li{
+    height: 76px;
+    width: 76px;
+    background: #ccc;
+    font-size: 24px;
+    line-height: 76px;
+    list-style: none;
+    text-align: center;
+    float:left;
+    margin-right: 3px;
+    margin-bottom: 3px;
+}
+/* @end */
