--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -11,9 +11,9 @@
 }
 /* @group <header> & <footer> & <article> */
 header {
-  background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
-  border-top: 1px solid #6dc0a1;
-  border-bottom: 1px solid #063322;
+  background-color: #72be4b;
+  border-top: 1px solid #84dd56;
+  border-bottom: 1px solid #589739;
 }
 footer {
   background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d));
@@ -21,7 +21,7 @@ footer {
 }
 .title {
   color: #fff;
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 0px #589739;
 }
 article {
   background-color: #e2e2e2;
@@ -132,6 +132,14 @@ aside ~ article {
   color: #fff;
   text-shadow: 0px 1px 1px #000;
 }
+/* @group .button */
+a.button {
+  box-shadow: inset 0 1px 0 rgba(34, 57, 100, 0.6), inset 1px 0 0 rgba(34, 57, 100, 0.4), inset -1px 0 0 rgba(34, 57, 100, 0.5), inset 0 -1px 0 rgba(34, 57, 100, 0.6), inset 0 2px 0 rgba(255, 255, 255, 0.2), 0px 1px 0px rgba(255, 255, 255, 0.2);
+}
+a.button:active {
+  box-shadow: inset 0 1px 0 rgba(10, 10, 10, 0.5), inset 1px 0 0 rgba(10, 10, 10, 0.3), inset -1px 0 0 rgba(10, 10, 10, 0.4), inset 0 -1px 0 rgba(10, 10, 10, 0.5), inset 0 1px 5px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+/* @end */
 /* @group <inputs> */
 input, textarea, select {
   border: 1px solid #c5c5c5;
