--- a/src/stylesheets/less/Lungo.widgets.colour.less
+++ b/src/stylesheets/less/Lungo.widgets.colour.less
@@ -10,33 +10,33 @@
 @import "mixins.less";
 
 a.grey, .grey{background-color: @grey;}
-a.grey:active{background-color: @grey-active;}
+a.grey:active, a.grey.active{background-color: @grey-active;}
 a.black, .grey{background-color: @black;}
-a.black:active{background-color: @black-active;}
+a.black:active, a.black.active{background-color: @black-active;}
 a.red, .red{background-color: @red;}
-a.red:active{background-color: @red-active;}
+a.red:active, a.red.active{background-color: @red-active;}
 a.lightgreen, .lightgreen{background-color: @lightgreen;}
-a.lightgreen:active{background-color: @lightgreen-active;}
+a.lightgreen:active, a.lightgreen.active{background-color: @lightgreen-active;}
 a.green, .green{background-color: @green;}
-a.green:active{background-color: @green-active;}
+a.green:active, a.green.active{background-color: @green-active;}
 a.blue, .blue{background-color: @blue;}
-a.blue:active{background-color: @blue-active;}
+a.blue:active, a.blue.active{background-color: @blue-active;}
 a.arcticblue, .arcticblue{background-color: @arcticblue;}
-a.arcticblue:active{background-color: @arcticblue-active;}
+a.arcticblue:active, a.arcticblue.active{background-color: @arcticblue-active;}
 a.orange, .orange{background-color: @orange;}
-a.orange:active{background-color: @orange-active;}
+a.orange:active, a.orange.active{background-color: @orange-active;}
 a.purple, .purple{background-color: @purple;}
-a.purple:active{background-color: @purple-active;}
+a.purple:active, a.purple.active{background-color: @purple-active;}
 a.magenta, .magenta{background-color: @magenta;}
-a.magenta:active{background-color: @magenta-active;}
+a.magenta:active, a.magenta.active{background-color: @magenta-active;}
 a.pink, .pink{background-color: @pink;}
-a.pink:active{background-color: @pink-active;}
+a.pink:active, a.pink.active{background-color: @pink-active;}
 a.yellow, .yellow{background-color: @yellow;}
-a.yellow:active{background-color: @yellow-active;}
+a.yellow:active, a.yellow.active{background-color: @yellow-active;}
 a.twitter, .twitter:not(span){background-color: @twitter;}
-a.twitter:active{background-color: @twitter-active;}
+a.twitter:active, a.twitter.active{background-color: @twitter-active;}
 a.facebook, .facebook:not(span){background-color: @facebook;}
-a.facebook:active{background-color: @facebook-active;}
+a.facebook:active, a.facebook.active{background-color: @facebook-active;}
 
 li.grey{ box-shadow: inset 3px 0px 0px @grey;}
 li.black{ box-shadow: inset 3px 0px 0px @black;}
