--- a/release/lungo.theme.default.css
+++ b/release/lungo.theme.default.css
@@ -1,25 +1,11 @@
 /**
+ * Stylesheet
  *
- *    /$$
- *   | $$
- *   | $$       /$$   /$$ /$$$$$$$   /$$$$$$   /$$$$$$
- *   | $$      | $$  | $$| $$__  $$ /$$__  $$ /$$__  $$
- *   | $$      | $$  | $$| $$  \ $$| $$  \ $$| $$  \ $$
- *   | $$      | $$  | $$| $$  | $$| $$  | $$| $$  | $$
- *   | $$$$$$$$|  $$$$$$/| $$  | $$|  $$$$$$$|  $$$$$$/
- *   |________/ \______/ |__/  |__/ \____  $$ \______/
- *                                  /$$  \ $$
- *                                 |  $$$$$$/
- *                                  \______/
+ * @namespace LUNGO.Theme
+ * @class Default
  *
- * @copyright 2011 TapQuo Inc (c)
- * @license   http://www.github.com/tapquo/lungo/blob/master/LICENSE.txt
- * @version   1.1
- * @link      https://github.com/TapQuo/Lungo.js
- *
- * @author   Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-
 .app {
   background: #000000;
 }
