--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -10,8 +10,7 @@
 /* @group DIMENSIONS */
 /* @end */
 /* @group COLORS */
-/* @end */
-.app {
+/* @end */.app {
   background: #000000;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
@@ -19,23 +18,18 @@
 header {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-topright: 5px;
-  background: #2c8bca;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
-  background: -webkit-linear-gradient(top, #2c8bca 0%, #154f93 100%);
-  -webkit-box-shadow: inset 0 1px 0 #64b9e2, inset 0 -1px 0 #2566a4;
-  box-shadow: inset 0 1px 0 #64b9e2, inset 0 -1px 0 #2566a4;
   border-bottom: 1px solid #1a2838;
-  overflow: hidden;
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
+  box-shadow: inset 0 1px 0 #64b9e2, inset 0 -1px 0 #2566a4;
   position: absolute;
   z-index: 2;
 }
 footer {
-  background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1c1c));
-  border-top: 1px inset #1c1c1c;
+  background: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0%, #353b42), color-stop(50%, #272a2d));
+  border-top: 1px inset #2A2A2A;
+  color: #353b42;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .title {
   color: #ffffff;
@@ -53,27 +47,42 @@ article .title {
 nav a {
   color: rgba(255, 255, 255, 0.5);
 }
-nav a.current, nav a.active {
+nav a.current,
+nav a.active {
   color: #ffffff;
 }
 .toolbar a {
-  color: rgba(255, 255, 255, 0.2);
+  color: #cdd9e3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  font-weight: bold;
 }
-.toolbar a.current, .toolbar a.active {
-  background: #1c1c1c;
-  box-shadow: inset 0px 0px 8px #101010;
-  text-shadow: 0px 1px 4px #000;
+.toolbar a.current,
+.toolbar a.active {
+  background: #111;
+  box-shadow: inset 0 1px 1px #000000, -1px 0 0 rgba(255, 255, 255, 0.05), 1px 1px 0 rgba(255, 255, 255, 0.05);
 }
 .groupbar {
-  background: #ededed;
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  background: #272a2d;
+  border-bottom: solid 1px #000000;
+  box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.3);
 }
 .groupbar a {
   color: #6e6e6e;
 }
 .groupbar a.current {
-  color: #6e6e6e;
-  border-bottom: solid 3px #05bde9;
+  color: #fff;
+  border-bottom: solid 3px #2566a4;
 }
 /* @end */
 /* @group <aside> */
@@ -110,16 +119,19 @@ section.aside.onright {
   box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
 }
 @media handheld, only screen and (min-width: 768px) {
-  section.current, section.show {
+  section.current,
+  section.show {
     box-shadow: -4px 0 8px rgba(0, 0, 0, 0.5);
   }
-  section.current.onright, section.show.onright {
+  section.current.onright,
+  section.show.onright {
     box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
   }
 }
 /* @end */
 /* @group .list */
-.list, .list li:not(.toolbar) a {
+.list,
+.list li:not(.toolbar) a {
   color: #2a2a2a;
 }
 .list li {
@@ -134,11 +146,13 @@ section.aside.onright {
   color: #1b6777;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
 }
-.list li.selectable:active small, .list li.selectable:active .onright:not(.bubble) {
+.list li.selectable:active small,
+.list li.selectable:active .onright:not(.bubble) {
   color: #ffffff;
   text-shadow: none;
 }
-.list li small, .list li .onright:not(.bubble) {
+.list li small,
+.list li .onright:not(.bubble) {
   color: #888;
 }
 .list.indented li {
@@ -152,26 +166,24 @@ section.aside.onright {
   border-bottom: solid 1px  #e1e1e1;
 }
 .list .anchor {
-  background: #93d6e7;
-  color: #1b6777;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+  color: #ffffff;
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
   border: none;
 }
 .list .tip {
   color: #7a7a7a;
 }
-.list .tip.darker {
-  background-color: #2c2c2d;
+.list .tip.theme {
   color: #fff;
-  text-shadow: 0px 1px 0px #000;
-}
-.list .tip.darker a {
-  color: #fff !important;
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
 }
 .list .tip.dark {
-  background-color: #f4f4f4;
-  box-shadow: inset 0px 1px 0px #fff;
-  text-shadow: 0px 1px 0px #fff;
+  background: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0%, #353b42), color-stop(100%, #272a2d));
+  color: #fff;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+}
+.list .tip.dark a {
+  color: #fff !important;
 }
 .list .toolbar {
   border-bottom-color: rgba(0, 0, 0, 0.2);
@@ -194,74 +206,200 @@ section.aside.onright {
   color: #fff;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
-/* @group .button */
-.button {
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+.indented ul {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+.indented li:first-child {
+  -webkit-border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  border-radius: 5px 5px 0px 0px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  border-radius: 5px 5px 0px 0px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+.indented li:last-child {
+  -webkit-border-radius: 0px 0px 5px 5px;
+  -moz-border-radius: 0px 0px 5px 5px;
+  border-radius: 0px 0px 5px 5px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 0px 0px 5px 5px;
+  -moz-border-radius: 0px 0px 5px 5px;
+  border-radius: 0px 0px 5px 5px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
+}
+/* @group .button */
+.button {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
   -webkit-box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.25), inset 0 -3px 0 rgba(255, 255, 255, 0.05);
+  font-weight: bold;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 }
 .button.big {
   -webkit-box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.25), inset 0 -3px 0 rgba(255, 255, 255, 0.05), 0 1px 2px rgba(0, 0, 0, 0.3);
 }
-.button:active, .button.active {
+.button:active {
   -webkit-box-shadow: inset 0 29px 8px rgba(0, 0, 0, 0.1);
 }
 .button.default {
   background: #5a5a5a;
 }
-.button.default:active, .button.default.active {
+.button.default:active,
+.button.default.active {
   background: #4b4b4b;
 }
 /* @end */
 /* @group <inputs> */
-input, textarea, select {
+input,
+textarea,
+select {
   border: 1px solid #e1e1e1;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
   color: #858585;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-input:focus, textarea:focus, select:focus {
-  border-color: #05b8e2;
-  color: #05b8e2;
+input.underline,
+textarea.underline,
+select.underline {
+  border: none;
+  box-shadow: none;
+  border-bottom: 2px solid #e1e1e1;
+}
+input:focus,
+textarea:focus,
+select:focus {
+  border-color: #64b9e2;
 }
 label {
-  color: #05b8e2;
+  color: #e1e1e1;
   text-transform: uppercase;
   font-weight: bold;
 }
 .select:after {
   background: #858585;
   color: white;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
-input[type="checkbox"] + span, input[type="radio"] + span {
+/* @group .range */
+input[type="checkbox"] + span,
+input[type="radio"] + span {
   color: #fff;
   background: #a0a0a0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
-input[type="checkbox"] + span::before, input[type="radio"] + span::before {
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before {
   background: #c1c1c1;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
-input[type="checkbox"]:checked + span, input[type="radio"]:checked + span {
-  background: #07acd0;
+input[type="checkbox"]:checked + span,
+input[type="radio"]:checked + span {
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
+/* @end */
 /* @group range */
 input[type="range"] {
   background-color: #c7c7c7;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 input[type="range"]:active {
-  background-color: #34b7dc;
+  box-shadow: none;
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
 }
 input[type="range"]::-webkit-slider-thumb {
-  border: solid 7px rgba(255, 255, 255, 0.5);
-  background: #34b7dc;
+  box-shadow: 0 0 4px #333;
+  background: #fff;
 }
 input[type="range"]:active::-webkit-slider-thumb {
   box-shadow: 0px 0px 4px #34b7dc;
@@ -276,37 +414,68 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 .progress .bar {
   background: #c7c7c7;
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
 .progress .bar .value {
-  background: #34b7dc;
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
-.progress .bar .value .glow {
-  background-color: rgba(255, 255, 255, 0.25);
-  box-shadow: 0px 0px 3px #34b7dc;
+.progress .bar .value .label {
+  float: right;
+  margin-right: 3px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.6);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) !important;
+  font-size: 12px;
 }
 /* @end */
 /* @end */
 .bubble {
   color: #fff;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  text-shadow: none;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
   font-weight: bold !important;
+  border: solid 1px #ffffff;
+  box-shadow: 0 0 6px #000;
+}
+.bubble.count {
+  background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
 }
 header .bubble.count {
   background: #2c2c2d;
-}
-.bubble.count {
-  background: #05b8e2;
 }
 /* @end */
