--- a/src/stylesheets/Lungo.widgets.styl
+++ b/src/stylesheets/Lungo.widgets.styl
@@ -53,6 +53,9 @@
 .round
   border-radius( 4px )
 
+.block
+  display: block
+
 /* ================================  TAG  ================================ */
 .tag
   display: inline-block
@@ -65,6 +68,15 @@ size = 5px
 .margin
   &.bottom
     margin-bottom: size
+
+
+/* ================================  CAROUSEL  ================================ */
+[data-control=carousel]
+  overflow: hidden
+  list-style: none
+  margin: 0
+  // article
+  //   display: block !important
 
 /* ================================  TEXT  ================================ */
 .text
