--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -54,6 +54,9 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+.block {
+  display: block;
+}
 /* ================================  TAG  ================================ */
 .tag {
   display: inline-block;
@@ -64,6 +67,12 @@
 }
 .margin.bottom {
   margin-bottom: 5px;
+}
+/* ================================  CAROUSEL  ================================ */
+[data-control=carousel] {
+  overflow: hidden;
+  list-style: none;
+  margin: 0;
 }
 /* ================================  TEXT  ================================ */
 .text.thin {
